@@ -8,6 +8,7 @@ cloud_init_modules:
  - resizefs
  - set_hostname
  - update_hostname
+ - update_etc_hosts
  - rsyslog
 
 cloud_config_modules:
