@@ -19,6 +19,8 @@
  - move from '#opt_include' in config file format to conf_d.
    ie, now files in /etc/cloud.cfg.d/ is read rather than reading
    '#opt_include <filename>' or '#include <filename>' in cloud.cfg
+ - allow /etc/hosts to be written from hosts.tmpl. which allows
+   getting local-hostname into /etc/hosts (LP: #720440)
 0.6.0:
  - change permissions of /var/log/cloud-init.log to accomodate
    syslog writing to it (LP: #704509)
